# agent-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced.py  basic.py  run_content_pipeline.py
src/: __init__.py  __main__.py  agent_registry.py  agents.py  api.py  communication.py  config.py  core.py  cost_tracker.py  execution_engine.py  health.py  human_gate.py  models.py  orchestrator.py  pipeline.py  replay.py  task_decomposer.py  utils.py
tests/: test_agents.py  test_basic.py  test_benchmark.py  test_communication.py  test_core.py  test_integration.py  test_orchestrator.py  test_pipeline.py  test_replay.py
