[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator"
version = "0.2.0"
description = "A small step-pipeline orchestrator with typed handoffs between AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta" }]
keywords = ["ai", "agents", "orchestration", "pipeline", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]

[project.urls]
Repository = "https://github.com/MukundaKatta/agent-orchestrator"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
